--- a/GKarate/app/src/main/AndroidManifest.xml
+++ b/GKarate/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".CoachSelectionActivity"></activity>
+        <activity android:name=".ExerciseSelectionActivity"></activity>
+        <activity android:name=".NewExercise1Activity"></activity>
+        <activity android:name=".NewExercise2Activity"></activity>
+
     </application>
 
 </manifest>
