--- a/GKarate/app/build.gradle
+++ b/GKarate/app/build.gradle
@@ -26,6 +26,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.google.firebase:firebase-database:19.2.1'
     implementation 'com.google.firebase:firebase-firestore:21.4.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
