--- a/GKarate/app/src/main/AndroidManifest.xml
+++ b/GKarate/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ExerciseSummary"></activity>
+        <activity android:name=".AddMoveSelectKeypointsActivity"></activity>
+        <activity android:name=".AddMoveToExercise1Activity" />
+        <activity android:name=".ExerciseSummary" />
         <activity android:name=".SelectKeypointActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
